[gd_scene load_steps=21 format=3 uid="uid://dxa0y5yfedk8s"]

[ext_resource type="Theme" uid="uid://cegg3xuaofnvx" path="res://scenes/data/theme.tres" id="1_7lv4s"]
[ext_resource type="Script" path="res://scenes/dialogue/dialogue_scene.gd" id="1_s5hh1"]
[ext_resource type="FontFile" uid="uid://daofijf3ycy6k" path="res://scenes/data/fonts/Aleo-VariableFont_wght.ttf" id="2_es5gh"]
[ext_resource type="FontFile" uid="uid://bfkvgx07nqvy3" path="res://scenes/data/fonts/Aleo-Bold.ttf" id="3_uvdru"]
[ext_resource type="FontFile" uid="uid://cgu0d1fepqdbp" path="res://scenes/data/fonts/Aleo-Italic.ttf" id="4_5rxcn"]
[ext_resource type="FontFile" uid="uid://ct4ls6wbdv257" path="res://scenes/data/fonts/Aleo-BoldItalic.ttf" id="5_cauvp"]
[ext_resource type="Script" path="res://addons/dialogue_manager/dialogue_label.gd" id="7_61jpe"]
[ext_resource type="Script" path="res://addons/dialogue_manager/dialogue_reponses_menu.gd" id="8_k34y8"]

[sub_resource type="Animation" id="Animation_er54k"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Balloon/ScalePoint/DialogueBox:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Balloon/ScalePoint/DialogueBox:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:_shown")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Balloon/ScalePoint:scale")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_7um8k"]
resource_name = "hide"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Balloon/ScalePoint/DialogueBox:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Balloon/ScalePoint/DialogueBox:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:_shown")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [false],
"method": &"shown"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Balloon/ScalePoint:scale")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_r3pdt"]
resource_name = "show"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Balloon/ScalePoint/DialogueBox:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Balloon/ScalePoint/DialogueBox:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:_shown")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [true],
"method": &"shown"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Balloon/ScalePoint:scale")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6fqxv"]
_data = {
"RESET": SubResource("Animation_er54k"),
"hide": SubResource("Animation_7um8k"),
"show": SubResource("Animation_r3pdt")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1va5f"]
bg_color = Color(0.937255, 0.901961, 0.870588, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fh4iv"]
content_margin_top = 15.0
bg_color = Color(0.937255, 0.901961, 0.870588, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxLine" id="StyleBoxLine_bphdr"]
color = Color(0, 0, 0, 0.662745)
grow_begin = 0.0
grow_end = 0.0
thickness = 2

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mir1b"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8dk2t"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dgb06"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bqbdd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_a0wfj"]

[node name="DialogueScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s5hh1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6fqxv")
}
speed_scale = 4.2

[node name="Balloon" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="ScalePoint" type="Control" parent="Balloon"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_top = -126.0
offset_bottom = -126.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1e-05, 1e-05)
mouse_filter = 1
metadata/_edit_group_ = true

[node name="DialogueBox" type="Control" parent="Balloon/ScalePoint"]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -650.0
offset_top = -165.0
offset_right = 650.0
offset_bottom = 98.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Balloon/ScalePoint/DialogueBox"]
layout_mode = 2
offset_right = 260.0
offset_bottom = 55.0
alignment = 1

[node name="CharacterNamePanel" type="MarginContainer" parent="Balloon/ScalePoint/DialogueBox/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_7lv4s")
metadata/_edit_group_ = true

[node name="NegativeMargin" type="MarginContainer" parent="Balloon/ScalePoint/DialogueBox/VBoxContainer/CharacterNamePanel"]
layout_mode = 2
theme_override_constants/margin_top = 3
theme_override_constants/margin_bottom = 4

[node name="BackgroundPanel" type="Panel" parent="Balloon/ScalePoint/DialogueBox/VBoxContainer/CharacterNamePanel/NegativeMargin"]
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_1va5f")

[node name="MarginContainer" type="MarginContainer" parent="Balloon/ScalePoint/DialogueBox/VBoxContainer/CharacterNamePanel"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_right = 30

[node name="VBoxContainer" type="VBoxContainer" parent="Balloon/ScalePoint/DialogueBox/VBoxContainer/CharacterNamePanel/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="CharacterLabel" type="RichTextLabel" parent="Balloon/ScalePoint/DialogueBox/VBoxContainer/CharacterNamePanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/shadow_outline_size = 1
theme_override_constants/outline_size = 2
theme_override_font_sizes/normal_font_size = 36
theme_override_font_sizes/bold_font_size = 36
theme_override_font_sizes/italics_font_size = 36
theme_override_font_sizes/bold_italics_font_size = 36
bbcode_enabled = true
text = "Lysandra"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="Balloon" type="PanelContainer" parent="Balloon/ScalePoint/DialogueBox"]
layout_mode = 2
offset_top = 59.0
offset_right = 1300.0
offset_bottom = 263.0
size_flags_vertical = 3
mouse_filter = 1
theme = ExtResource("1_7lv4s")
theme_override_styles/panel = SubResource("StyleBoxFlat_fh4iv")
metadata/_edit_group_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="Balloon/ScalePoint/DialogueBox/Balloon"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="Balloon/ScalePoint/DialogueBox/Balloon/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_override_styles/separator = SubResource("StyleBoxLine_bphdr")

[node name="MarginContainer" type="MarginContainer" parent="Balloon/ScalePoint/DialogueBox/Balloon/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 10

[node name="DialogueLabel" type="RichTextLabel" parent="Balloon/ScalePoint/DialogueBox/Balloon/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
theme_override_fonts/normal_font = ExtResource("2_es5gh")
theme_override_fonts/bold_font = ExtResource("3_uvdru")
theme_override_fonts/italics_font = ExtResource("4_5rxcn")
theme_override_fonts/bold_italics_font = ExtResource("5_cauvp")
theme_override_font_sizes/normal_font_size = 26
theme_override_font_sizes/bold_font_size = 26
theme_override_font_sizes/italics_font_size = 26
theme_override_font_sizes/bold_italics_font_size = 26
bbcode_enabled = true
text = "Whatchu gon do bout it hoeh.
Do the ichiban ue.
Bling asdasdasdasdasdasdasdasd
bangasdasdasdasdasdasdasdasdasdasdasdasd
"
fit_content = true
scroll_active = false
shortcut_keys_enabled = false
meta_underlined = false
hint_underlined = false
deselect_on_focus_loss_enabled = false
script = ExtResource("7_61jpe")
skip_pause_at_abbreviations = PackedStringArray("Mr", "Mrs", "Ms", "Dr", "etc", "eg", "ex")

[node name="HBoxContainer" type="HBoxContainer" parent="Balloon/ScalePoint/DialogueBox/Balloon/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HSeparator" type="HSeparator" parent="Balloon/ScalePoint/DialogueBox/Balloon/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_override_styles/separator = SubResource("StyleBoxLine_bphdr")

[node name="MenuButton" type="Button" parent="Balloon/ScalePoint/DialogueBox/Balloon/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_mir1b")
theme_override_styles/hover = SubResource("StyleBoxEmpty_8dk2t")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_dgb06")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_bqbdd")
theme_override_styles/focus = SubResource("StyleBoxEmpty_a0wfj")
text = "Menu"
flat = true

[node name="HSeparator2" type="HSeparator" parent="Balloon/ScalePoint/DialogueBox/Balloon/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_override_styles/separator = SubResource("StyleBoxLine_bphdr")

[node name="MarginContainer" type="MarginContainer" parent="Balloon"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -276.0
offset_top = -302.0
offset_right = 276.0
offset_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true

[node name="ResponsesMenu" type="VBoxContainer" parent="Balloon/MarginContainer" node_paths=PackedStringArray("response_template")]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1
script = ExtResource("8_k34y8")
response_template = NodePath("Button")

[node name="Button" type="Button" parent="Balloon/MarginContainer/ResponsesMenu"]
layout_mode = 2
theme = ExtResource("1_7lv4s")
text = "Buttone"
